# spacy-to-hf

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: CODEOWNERS  publish.yaml  test.yaml
demo/: README.md  app.py  requirements.txt
spacy_to_hf/: __init__.py  conversion.py  utils.py
tests/: constants.py  test_conversion.py
