[build-system]
requires = [
    "setuptools >=65.0",
    "wheel >=0.36.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-to-hf"
dynamic = ["version"]
readme = "README.md"
license = {text = 'Apache 2.0'}
description = "Spacy to HF converter"
requires-python = ">=3.7"
dependencies = [
    "spacy <3",
    "pytokenizations",
    "transformers",
    "datasets",
    "flax"  # As the backend for transformers. Smaller/Faster than torch or tf
]
[[project.authors]]
name = "Ben Epstein"
email = "ben.epstein97+spacy-hf@gmail.com"

[project.optional-dependencies]
dev = [
    "black >=21.10b0",
    "coverage >=6.1.1",
    "invoke >=2.0.0",
    "mypy >=0.910",
    "packaging >=21.0",
    "pre-commit >=2.17.0",
    "pytest >=6.2.5",
    "pytest-cov >=3.0.0",
    "ruff >=0.0.98",
    "build >=0.7.0",
]

[project.urls]
Documentation = "https://github.com/ben-epstein/spacy-to-hf"

[tool.setuptools.dynamic]
version = {attr = "spacy_to_hf.__version__"}

[tool.ruff]
line-length = 88
ignore = ["D10"]
include = ["*.py"]
select = ["E", "F", "I"]
target-version = "py310"
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D415",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.*_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
mypy_path = ["spacy_to_hf", "tests"]
exclude = ["dist", "build", ".venv"]

[tool.coverage.run]
source = ["spacy_to_hf", "tests"]
omit = ["*__init__.py"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError'
]
